# Low-Latency-Order-Validator

./: CMakeLists.txt  folder_structure.txt
benchmarks/: latency_histogram.py
include/core/: messages.hpp  seqlock.hpp  spsc_queue.hpp
include/net/: udp_receiver.hpp  zero_copy_parser.hpp
include/trading/: risk_engine.hpp  rules.hpp
include/utils/: huge_page_allocator.hpp  memory_pool.hpp  rdtsc_timer.hpp
src/: data_generator.cpp  main.cpp
